# zmk-raw-hid

./: CMakeLists.txt  Kconfig  README.md  build.yaml
boards/shields/raw_hid_adapter/: raw_hid_adapter.conf  raw_hid_adapter.overlay
config/: corne.conf  west.yml
include/raw_hid/: events.h  raw_hid.h
include/zmk/raw-hid/: raw_hid.h
src/: ble_security.c  events.c  hog.c  now_playing_client.c  now_playing_forward.c  now_playing_forwarder.c  now_playing_peripheral.c  raw_hid.c  raw_hid_split_bridge.c  split_bridge.c  usb_hid.c
src/raw-hid/: hog.c  raw_hid.c  usb_hid.c
zephyr/: module.yml
